using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace CodeGenEngine
{
    public enum AccessOperator
    {
        PRIVATE,
        PUBLIC,
        PROTECTED
    }
}
