namespace CodeGenEngine
{
    public interface IMapped
    {
        Dictionary<string, string> GetMapping();
    }
}