using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace CodeGenEngine
{
    public class DataType
    {
        public string Key { get; set; }
        public DataType(string key)
        {
            Key = key;
        }
    }
}
